# linuxhud

./: .gitignore  ARCHITECTURE.md  BUILD_SYSTEM_SUMMARY.md  FINAL_SUMMARY.md  GITIGNORE_GUIDE.md  MAKEFILE_GUIDE.md  Makefile  PROJECT.md  PROJECT_SUMMARY.md  README.md  SUMMARY.md  TESTING_GUIDE.md  TEST_CASES.md  linuxhud.conf  linuxhud.service  meson.build  run_demo.sh  test_display.sh  test_e2e.sh  test_makefile.sh  test_plane.c  test_plane2.c  test_project.sh  test_vt.sh
include/: linuxhud.h
include/linuxhud/: drm.h  hud.h  render.h  types.h  widget.h
src/: buffer.c  drm_device.c  main.c  renderer.c
src/core/: hud.c  log.c  types.c
src/drm/: device.c
src/render/: renderer.c
src/widget/: widget.c
tests/: test_drm.c  test_widget.c
